[package]
name = "quantum-soft-keyboard"
version = "0.1.0"
authors = ["Wayne Warren <wayne.warren.s@gmail.com>"]
edition = "2018"

[lib]
name = "qsk"
path = "src/lib.rs"

[[bin]]
name = "qsk"
path = "src/main.rs"

[dependencies]
async-std = { version = "~1.5", features = ["unstable"] }
async-compat = "0.2.1" 
maplit = "1.0"

# cli
clap = "~3.0"
fern = "~0.5" # log implementation

# logging
log = "~0.4"
serde = {version = "~1.0", features = ["derive"]}
serde_yaml = "~0.8"

# errors
thiserror = "1.0"

# events
num = "~0.3"
num-derive = "~0.3"
num-traits = "~0.2"

# device
evdev-rs = "0.4"
#evdev = "~0.11"
evdev = { path = "../evdev", features = ["tokio"]}
futures = "~0.3"

[dev-dependencies]
galvanic-assert = "~0.8"
maplit = "1.0"
