[package]
name = "quantum-soft-keyboard"
version = "0.1.0"
authors = ["Wayne Warren <wayne.warren.s@gmail.com>"]
edition = "2018"

[lib]
name = "qsk"
path = "src/lib.rs"

[[bin]]
name = "qsk"
path = "src/main.rs"

[dependencies]
# qsk crates
qsk-types = { path = "qsk-types" }

# async stuff
async-std = { version = "~1.10", features = ["unstable"] }
async-compat = "0.2.1" 
maplit = "1.0"

# cli
clap = "~3.0"
fern = "~0.5" # log implementation

# logging
log = "~0.4"
serde = {version = "~1.0", features = ["derive"]}
serde_json = "~1.0"

# errors
thiserror = "1.0"

# device/events
num = "~0.3"

# device
#evdev-rs = "~0.5"
evdev-rs = { git = "https://github.com/waynr/evdev-rs", branch = "fix-cargo-rerun-if-changed" }
#evdev = "~0.11"
evdev = { path = "../evdev", features = ["tokio"]}
futures = "~0.3"

[dev-dependencies]
galvanic-assert = "~0.8"
maplit = "1.0"
