[package]
name = "qsk"
version = "0.1.0"
authors = ["Wayne Warren <wayne.warren.s@gmail.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"
description = "Software keyboard remapper inspired by QMK."
# note: README.md in this repo hasn't been written with publishing to docs.rs
# in mind, so for now let's leave it out of the published docs
readme = false
repository = "https://github.com/waynr/qsk"

[lib]
name = "qsk"
path = "src/lib.rs"

[[bin]]
name = "qsk"
path = "src/main.rs"

[dependencies]
# qsk crates
qsk-types = "~0.1"
qsk-macros = "~0.1"

# async stuff
async-std = { version = "~1.10", features = ["unstable"] }
async-compat = "0.2.1"
maplit = "1.0"

# cli
clap = { version = "~3.0", features = ["cargo"] }
fern = "~0.5" # log implementation

# logging
log = "~0.4"
serde = {version = "~1.0", features = ["derive"]}
serde_json = "~1.0"

# errors
thiserror = "1.0"

# device/events
num = "~0.3"

# device
evdev-rs = "~0.5"
evdev = { version = "~0.11", features = ["tokio"] }
futures = "~0.3"

[dev-dependencies]
galvanic-assert = "~0.8"
maplit = "1.0"
