[package]
name = "qsk-macros"
version = "0.1.0"
edition = "2021"

[lib]
proc-macro = true

[dependencies]
syn = { version = "~1.0", features = ["full"] }
quote = "~1.0"
proc-macro2 = "~1.0"
proc-macro-error = "~1.0"

qsk-types = { path = "../qsk-types" }

[dev-dependencies]
galvanic-assert = "~0.8"

trybuild = "~1.0"
