[package]
name = "qsk-types"
version = "0.1.0"
edition = "2021"

[dependencies]
num = "~0.3"
num-derive = "~0.3"
num-traits = "~0.2"

strum = "~0.23"
strum_macros = "~0.23"

serde = {version = "~1.0", features = ["derive"]}
serde_json = "~1.0"

thiserror = "~1.0"

[dev-dependencies]
galvanic-assert = "~0.8"
maplit = "1.0"
