[package]
name = "qsk-types"
version = "0.1.0"
authors = ["Wayne Warren <wayne.warren.s@gmail.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Types used in qsk and qsk-macros."
readme = false
repository = "https://github.com/waynr/qsk"

[dependencies]
num = "~0.3"
num-derive = "~0.3"
num-traits = "~0.2"

strum = "~0.23"
strum_macros = "~0.23"

serde = {version = "~1.0", features = ["derive"]}
serde_json = "~1.0"

thiserror = "~1.0"

[dev-dependencies]
galvanic-assert = "~0.8"
maplit = "1.0"
