[package]
name = "qsk-device"
version = "0.1.0"
authors = ["Wayne Warren <wayne.warren.s@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
evdev-rs = "0.4"
evdev = { version = "~0.11", features = ["tokio"] }
thiserror = "1.0"
futures = "~0.3"

# logging
log = "~0.4"

# qsk
qsk-events = { version = "0.1.0", path = "../qsk-events" }
qsk-errors = { version = "0.1.0", path = "../qsk-errors" }
