[package]
name = "qsk-engine"
version = "0.1.0"
authors = ["Wayne Warren <wayne.warren.s@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = { version = "~1.5", features = ["unstable"] }

# logging
log = "~0.4"

# qsk
qsk-events = { version = "0.1.0", path = "../qsk-events" }
qsk-layers = { version = "0.1.0", path = "../qsk-layers" }
