[package]
name = "qsk-events"
version = "0.1.0"
authors = ["Wayne Warren <wayne.warren.s@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
qsk-errors = { version = "0.1.0", path = "../qsk-errors" }

num-derive = "0.3"
num-traits = "0.2"
