[package]
name = "qsk-layers"
version = "0.1.0"
authors = ["Wayne Warren <wayne.warren.s@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# qsk
qsk-events = { version = "0.1.0", path = "../qsk-events" }

# logging
log = "~0.4"

[dev-dependencies]
galvanic-assert = "~0.8"
maplit = "1.0"
